--- a/app/src/main/res/layout/activity_signuppage.xml
+++ b/app/src/main/res/layout/activity_signuppage.xml
@@ -69,8 +69,8 @@
 
     <RadioGroup
         android:id="@+id/gender_group"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
 
@@ -79,7 +79,7 @@
             android:layout_height="wrap_content"
             android:text="Gender"
             android:textColor="@color/colorAccent"
-            android:textSize="10dp"
+            android:textSize="20dp"
             android:textStyle="bold" />
 
         <RadioButton
@@ -87,13 +87,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Male"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:textColor="@color/colorAccent"
-            android:textSize="10dp" />
+            android:textSize="20dp" />
 
         <RadioButton
             android:id="@+id/radio2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:text="Female"
             android:textColor="@color/colorAccent"
             android:textSize="20dp" />
@@ -104,13 +107,14 @@
         android:id="@+id/reg_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="120dp"
+        android:layout_marginBottom="10dp"
         android:padding="20dp"
         android:background="@drawable/roundbutton"
         android:gravity="center"
         android:text="SIGN UP"
-        android:textSize="0dp" />
+        android:textSize="10dp" />
 
     <TextView
         android:id="@+id/goto_login"
