--- a/app/src/main/res/layout/activity_loginpage.xml
+++ b/app/src/main/res/layout/activity_loginpage.xml
@@ -1,62 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".loginpage">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="40dp"
-        android:layout_gravity="center"
-        android:textColor="@color/colorAccent"
-        android:textStyle="bold"
-        android:text="LOG IN"
-        android:padding="40dp"
-        />
-    <EditText
-        android:id="@+id/login_Email"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter Email"
-        android:inputType="textEmailAddress"
-        android:layout_margin="10dp"
-        android:textColorHint="@color/colorAccent"
-        />
-    <EditText
-        android:id="@+id/login_Password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        android:layout_margin="10dp"
-        android:textColorHint="@color/colorAccent"
-        android:inputType="textPassword"/>
-    <Button
-        android:id="@+id/login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"
-        android:paddingLeft="80dp"
-        android:paddingRight="80dp"
-        android:textSize="25dp"
-        android:text="LOG IN"
-        android:background="@drawable/roundbutton"
-        />
-    <TextView
-        android:id="@+id/goto_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:padding="40dp"
-        android:textSize="20dp"
-        android:text="Create an Account Registration"/>
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="3dp"
+        app:cardPreventCornerOverlap="false"
+        app:cardUseCompatPadding="true">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/ln"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:background="@color/colorPrimary"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:tint="@color/white"
+                    android:layout_width="80dp"
+                    android:padding="10dp"
+                    android:src="@drawable/img_login"
+                    android:layout_height="80dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="22sp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="20dp"
+                    android:textColor="@color/white"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="LOG IN"
+                    />
+            </LinearLayout>
 
 
+            <RelativeLayout
+                android:id="@+id/relativelayout1"
+                android:layout_below="@+id/ln"
+                android:layout_width="match_parent"
+                android:layout_marginTop="50dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="10dp"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/imgView_usericon"
+                    android:layout_width="40dp"
+                    android:padding="8dp"
+                    android:background="@color/colorPrimary"
+                    android:src="@drawable/img_email"
+                    android:tint="@color/white"
+                    android:layout_height="40dp"/>
+                <EditText
+                    android:id="@+id/login_Email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress"
+                    android:textSize="15sp"
+                    android:layout_alignParentTop="true"
+                    android:paddingLeft="20dp"
+                    android:background="@color/edittextBG"
+                    android:layout_toRightOf="@+id/imgView_usericon"
+                    android:layout_alignBottom="@id/imgView_usericon"/>
+            </RelativeLayout>
 
-</LinearLayout>
+
+            <RelativeLayout
+                android:id="@+id/relativelayout2"
+                android:layout_below="@+id/relativelayout1"
+                android:layout_width="match_parent"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="10dp"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/imgView_email"
+                    android:layout_width="40dp"
+                    android:padding="8dp"
+                    android:background="@color/colorPrimary"
+                    android:src="@drawable/img_authentication"
+                    android:tint="@color/white"
+                    android:layout_height="40dp"/>
+
+                <EditText
+                    android:id="@+id/login_Password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@id/imgView_email"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="-2dp"
+                    android:layout_toRightOf="@+id/imgView_email"
+                    android:background="@color/edittextBG"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:paddingLeft="20dp"
+                    android:textSize="15sp" />
+            </RelativeLayout>
+
+
+            <RelativeLayout
+                android:id="@+id/relativelayout3"
+                android:layout_below="@+id/relativelayout2"
+                android:layout_width="match_parent"
+                android:layout_marginTop="40dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="0dp"
+                android:layout_height="wrap_content">
+                <Button
+                    android:id="@+id/login_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="50dp"
+                    android:paddingRight="50dp"
+                    android:layout_centerHorizontal="true"
+                    android:paddingTop="25dp"
+                    android:paddingBottom="25dp"
+                    android:background="@drawable/roundbutton"
+                    android:gravity="center"
+                    android:text="SIGN UP"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:layout_centerHorizontal="true"
+                    android:id="@+id/goto_register"
+                    android:textSize="20sp"
+                    android:textColor="@color/colorPrimary"
+                    android:layout_marginTop="80dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Already have a account?"/>
+
+            </RelativeLayout>
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+</RelativeLayout>
