--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:text="DRIVER DROWSINESS DETECTION"
         android:gravity="center"
+        android:textColor="@color/white"
         android:layout_margin="20dp"
         android:textSize="30dp"
         android:textStyle="bold"
