--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="control_background">#cc4285f4</color>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#806021</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#6E2C90</color>
+    <color name="colorPrimaryDark">#551B72</color>
+    <color name="colorAccent">#F82970</color>
+    <color name="edittextBG">#DADADA</color>
+    <color name="white">#FFFFFF</color>
+    <color name="textColor">#6e6e6e</color>
+    <color name="transparent">#000000</color>
+
 </resources>
